thumbnailer (2.3-0ubuntu1) UNRELEASED; urgency=medium

  [ Michi Henning ]
  * Added man pages for thumbnailer-admin, thumbnailer-service,
    thumbnailer-settings, and vs-thumb.
  * Removed a bunch of lintian warnings and errors.
  * Removed source for persistent cache.

 -- Michi Henning <michi.henning@canonical.com>  Thu, 06 Aug 2015 15:13:17 +1000

thumbnailer (2.2+15.10.20150801-0ubuntu1) wily; urgency=medium

  [ Michi Henning ]
  * Compatibility fixes  for GCC 5, Boost 1.58, and Libapparmor 2.10.
  * Correctly initialise the cache stats after upgrading from an old
    cache version.
  * Rename clear-stats sub-command of thumbnailer-admin to zero-stats.

  [ James Henstridge ]
  * Pass a filename to the vs-thumb helper utility rather than a file
    descriptor.  This avoids the use of the fdsrc GStreamer element, which
    appears to be unstable on Wily.

  [ CI Train Bot ]
  * New rebuild forced.

 -- CI Train Bot <ci-train-bot@canonical.com>  Sat, 01 Aug 2015 04:32:14 +0000

thumbnailer (2.1.1) UNRELEASED; urgency=medium

  [ Michi Henning ]
  * Added request limiter on the qml side, so we don't overrun DBus with
    too many outstanding requests. (DBus kills the connection if there
    are more than 400 or so outstanding requests.)

 -- Michi Henning <michi.henning@canonical.com>  Mon, 03 Aug 2015 14:28:09 +1000

thumbnailer (2.1+15.10.20150715-0ubuntu1) wily; urgency=medium

  [ James Henstridge ]
  * Expose more settings for the thumbnailer daemon via GSettings.
  * Change the security policy implementation to use aa_query_label()
    for file access checks rather than relying on file descriptor
    passing.  This avoids the file descriptor exhaustion bugs with the
    previous implementation. (LP: #1381713)

  [ Michi Henning ]
  * Add thumbnailer-admin tool, which can be used to check the status
    of the cache and generate thumbnails via the command line.
  * Add time stamps to log messages.