@@ -5,6 +5,10 @@ thumbnailer (2.3-0ubuntu1) UNRELEASED; urgency=medium
     thumbnailer-settings, and vs-thumb.
   * Removed a bunch of lintian warnings and errors.
   * Removed source for persistent cache.
+  * Added inactivity timeout to admin interface, so the service
+    exits after 30 seconds if it is started only to, for example,
+    retrieve the stats, and activity on the admin interface keeps
+    the service alive the same way activity on the thumbnailer interface does.
 
  -- Michi Henning <michi.henning@canonical.com>  Thu, 06 Aug 2015 15:13:17 +1000
 
